Add vector search capabilites

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.ai.openai.model=meta-llama/Llama-2-13b-chat-hf
 spring.ai.openai.base-url=https://vllm.libra.decc.vmware.com/api/
+spring.ai.openai.embedding-model=intfloat/e5-small
 openai.max.tokens=4000
+
+spring.sql.init.mode=always
