--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,10 @@ spring.ai.openai.base-url=https://vllm.libra.decc.vmware.com/api/
 spring.ai.openai.embedding-model=intfloat/e5-small
 openai.max.tokens=4000
 
+app.name=explore
+service.name=api
+
+management.wavefront.application.name=${app.name}
+management.wavefront.application.service-name=${service.name}
+
 spring.sql.init.mode=always
