Finish v1 with SSE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.ai.openai.model=meta-llama/Llama-2-13b-chat-hf
+spring.ai.openai.model=WizardLM/WizardLM-70B-V1.0
 spring.ai.openai.base-url=https://vllm.libra.decc.vmware.com/api/
 spring.ai.openai.embedding-model=intfloat/e5-small
-openai.max.tokens=4000
 
 app.name=explore
 service.name=api
