Testing max pool size to 1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ service.name=api
 
 management.wavefront.application.name=${app.name}
 management.wavefront.application.service-name=${service.name}
+
+spring.datasource.hikari.maximum-pool-size=1
