--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ management.wavefront.application.service-name=${service.name}
 # To prevent model loading on every new db connection (not ideal)
 spring.datasource.hikari.maximum-pool-size=1
 spring.datasource.hikari.idle-timeout=0
+spring.datasource.hikari.maxLifetime=0
